# PracticaSpring2021

./: .gitignore  README.md
App/: CMakeLists.txt
App/include/: CMakeLists.txt
App/src/: Main.cpp
Dependencies/OpenCV_4.2.0_build/x64/vc16/lib/: opencv_calib3d452.lib  opencv_calib3d452d.lib  opencv_core452d.lib  opencv_dnn452.lib  opencv_dnn452d.lib  opencv_features2d452.lib  opencv_features2d452d.lib  opencv_flann452.lib  opencv_flann452d.lib  opencv_gapi452.lib  opencv_gapi452d.lib  opencv_imgcodecs452d.lib  opencv_ml452.lib  opencv_ml452d.lib  opencv_objdetect452.lib  opencv_objdetect452d.lib  opencv_photo452d.lib  opencv_stitching452.lib  opencv_stitching452d.lib  opencv_videoio452.lib  opencv_videoio452d.lib
Documents/: ProjectSpecification_Game-Rentz.txt  ProjectSpecification_ImageProcessingApp.txt
GraphicalProcessingDLL/: CMakeLists.txt
GraphicalProcessingDLL/src/: GraphicalAlgorithmsLibrary.cpp
INTERFATA/ToolBar/: CMakeLists.txt  aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
INTERFATA/build-ToolBar-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
INTERFATA/build-ToolBar-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-e716374745ac7ef23482.json  cmakeFiles-v1-25e9db2f539cf91ed78f.json  codemodel-v2-01e38c8859cd35dd1dcc.json  index-2021-05-25T08-37-59-0413.json  target-ToolBar-Debug-ba504267ce4367619689.json  target-ToolBar_autogen-Debug-16c47e6cbae148eabcfb.json  target-ToolBar_autogen_timestamp_deps-Debug-1e8ff22b2d5c00f57ec7.json
INTERFATA/build-ToolBar-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/ToolBar_autogen/: deps
INTERFATA/build-ToolBar-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/ToolBar_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
INTERFATA/build-ToolBar-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/ToolBar_autogen/include/: ui_mainwindow.h
Presentation/: OpenApp.bat
Presentation/ImageSet/SavedImages/: dog.tif
Project/: CMakeLists.txt
Project/App/: CMakeLists.txt
Project/App/Resources/: CMakeLists.txt
Project/App/include/: CMakeLists.txt  Utils.h  mainwindow.h
Project/App/src/: CMakeLists.txt  Main.cpp  Resource.qrc  Utils.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
Project/GraphicalProcessingDLL/: CMakeLists.txt
Project/GraphicalProcessingDLL/include/: CMakeLists.txt  GraphicalAlgorithmsLibrary.h
Project/GraphicalProcessingDLL/src/: CMakeLists.txt  GraphicalAlgorithmsLibrary.cpp
Project/UIDLL/: CMakeLists.txt
Project/UIDLL/include/: CMakeLists.txt  UILibrary.h
Project/UIDLL/src/: CMakeLists.txt  UILibrary.cpp
Project/proj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Application.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Project/proj/App/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  App.sln  App.vcxproj  App.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/App/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/App/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/GraphicalProcessingDLL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GraphicalProcessingDLL.sln  GraphicalProcessingDLL.vcxproj  GraphicalProcessingDLL.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/GraphicalProcessingDLL/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/GraphicalProcessingDLL/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/UIDLL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  UIDLL.sln  UIDLL.vcxproj  UIDLL.vcxproj.filters  cmake_install.cmake
Project/proj/UIDLL/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Project/proj/UIDLL/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
